# fslint

./: .release.toml  Cargo.toml  LICENSE  README.md  changelog.md  cliff.toml  linter-rules.md  readme.md  schema.json
.github/workflows/: release.yaml
src/: main.rs
src/cli/: mod.rs
src/cli/render/: markdown.rs  mod.rs  schema.rs  summary.rs
src/fs/: linter.rs  mod.rs  node.rs
src/fs/config/: loader.rs  mod.rs  schema.rs  validate.rs
src/fs/domain/: id3.rs  mod.rs
src/fs/domain/exif/: mod.rs  provider.rs  utils.rs
src/fs/domain/exif/rules/: has_capture.rs  has_coords.rs  mod.rs
src/fs/domain/fs/: provider.rs  utils.rs
src/fs/domain/fs/rules/: broken_symlink.rs  mod.rs  permission.rs
src/fs/metadata/: id3.rs  mod.rs  text.rs  video.rs
src/fs/metadata/exif/: mod.rs  provider.rs  utils.rs
src/fs/metadata/exif/rules/: has_capture.rs  has_coords.rs  mod.rs
src/fs/rule/: base.rs  macros.rs  mod.rs  options.rs  rule.rs
src/utils/: args.rs  dummy.rs  json.rs  logging.rs  mod.rs  walk.rs
src/utils/fsinfo/: group.rs  kind.rs  mod.rs  owner.rs  timestamp.rs
