[package]
name = "fslint"
version = "0.1.2-dev"
edition = "2021"
authors = ["grubyak"]
description = "Linter for filesystem consistency: names, metadata, permissions and sizes."
license = "MIT"
repository = "https://github.com/grubyak/fslint"

[dependencies]
walkdir = "2.5.0"
glob = "0.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
clap = { version = "4.5.45", features = ["derive"] }
log = "0.4.27"
env_logger = { version = "0.11.8", features = ["color"] }
users = "0.11.0"
schemars = { version = "1.0.4", features = ["derive"] }
colored = "3.0.0"
jsonschema = "0.32.1"
serde_path_to_error = "0.1.17"
globset = "0.4.16"
rexiv2 = "0.10.0"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
